--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <title>GifExpertApp</title>
-  <script type="module" crossorigin src="./assets/index.js"></script>
-  <link rel="stylesheet" href="./assets/index.css" />
-
+  <script type="module" crossorigin src="./static/js/main.aeb6eea4.js"></script>
+  <link rel="stylesheet" href="./src/index.css" />
+C:\Users\Luz\Desktop\REACT\04-gif-expert-app\src\index.css
   <title>React App</title>
 </head>
 
