--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <title>GifExpertApp</title>
-  <script type="module" crossorigin src="./static/js/main.aeb6eea4.js"></script>
-  <link rel="stylesheet" href="./src/index.css" />
-C:\Users\Luz\Desktop\REACT\04-gif-expert-app\src\index.css
-  <title>React App</title>
-</head>
-
-<body>
-
-  <div id="root">
-    
-  </div>
-  
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>GifExpertApp</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
